--- a/CTFd/themes/core-beta/templates/components/navbar.html
+++ b/CTFd/themes/core-beta/templates/components/navbar.html
@@ -159,17 +159,33 @@
             </li>
           {% endif %}
 
-          <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('auth.login') }}">
-              <span data-bs-toggle="tooltip" data-bs-placement="bottom" title="{% trans %}Login{% endtrans %}">
-                <i class="fas fa-sign-in-alt d-none d-md-inline d-lg-none"></i>
-              </span>
-              <span class="d-sm-inline d-md-none d-lg-inline">
-                <i class="fas fa-sign-in-alt pe-1"></i>
-                {% trans %}Login{% endtrans %}
-              </span>
-            </a>
-          </li>
+          {% if direct_login_visible() %}
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('auth.login') }}">
+                <span data-bs-toggle="tooltip" data-bs-placement="bottom" title="{% trans %}Login{% endtrans %}">
+                  <i class="fas fa-sign-in-alt d-none d-md-inline d-lg-none"></i>
+                </span>
+                <span class="d-sm-inline d-md-none d-lg-inline">
+                  <i class="fas fa-sign-in-alt pe-1"></i>
+                  {% trans %}Login{% endtrans %}
+                </span>
+              </a>
+            </li>
+          {% endif %}
+
+          {% if oauth_login_visible() %}
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('auth.login_oauth') }}">
+                <span data-bs-toggle="tooltip" data-bs-placement="bottom" title="{% trans %}Login 42{% endtrans %}">
+                  <i class="fas fa-sign-in-alt d-none d-md-inline d-lg-none"></i>
+                </span>
+                <span class="d-sm-inline d-md-none d-lg-inline">
+                  <i class="fas fa-sign-in-alt pe-1"></i>
+                  {% trans %}Login 42{% endtrans %}
+                </span>
+              </a>
+            </li>
+          {% endif %}
         {% endif %}
         <li class="nav-item">
           <button class="nav-link theme-switch" type="button">
