--- a/CTFd/themes/admin/templates/configs/visibility.html
+++ b/CTFd/themes/admin/templates/configs/visibility.html
@@ -7,6 +7,7 @@
 			registration_visibility=registration_visibility,
 			display_direct_login=display_direct_login,
 			display_oauth2_login=display_oauth2_login,
+			display_po_login=display_po_login,
 		) 
 	%}
 	<form method="POST" autocomplete="off" class="w-100">
@@ -60,6 +61,14 @@
 			{{ form.display_oauth2_login(class="form-control custom-select") }}
 			<small class="form-text text-muted">
 				{{ form.display_oauth2_login.description }}
+			</small>
+		</div>
+
+		<div class="form-group">
+			{{ form.display_po_login.label }}
+			{{ form.display_po_login(class="form-control custom-select") }}
+			<small class="form-text text-muted">
+				{{ form.display_po_login.description }}
 			</small>
 		</div>
 
