--- a/CTFd/themes/core-beta/templates/components/navbar.html
+++ b/CTFd/themes/core-beta/templates/components/navbar.html
@@ -186,6 +186,20 @@
               </a>
             </li>
           {% endif %}
+
+          {% if po_login_visible() %}
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('auth.po_login') }}">
+                <span data-bs-toggle="tooltip" data-bs-placement="bottom" title="{% trans %}Login PO{% endtrans %}">
+                  <i class="fas fa-sign-in-alt d-none d-md-inline d-lg-none"></i>
+                </span>
+                <span class="d-sm-inline d-md-none d-lg-inline">
+                  <i class="fas fa-sign-in-alt pe-1"></i>
+                  {% trans %}Login PO{% endtrans %}
+                </span>
+              </a>
+            </li>
+          {% endif %}
         {% endif %}
         <li class="nav-item">
           <button class="nav-link theme-switch" type="button">
