--- a/CTFd/themes/admin/templates/challenges/create.html
+++ b/CTFd/themes/admin/templates/challenges/create.html
@@ -22,6 +22,17 @@
 				The category of your challenge
 			</small>
 		</label>
+		<br>
+		{% for cat in categories %}
+			<button 
+				class="btn btn-outline-info" 
+				style="padding: .25rem .5rem; font-size: .875rem; line-height: 1.5; border-radius: .2rem; margin-bottom: 8px;" 
+				type="button" 
+				onclick="selectCategoryOption('{{ cat }}')" 
+				value="{{ cat }}">
+				{{ cat }}
+			</button>
+		{% endfor %}
 		<input type="text" class="form-control" name="category" placeholder="Enter challenge category">
 	</div>
 	{% endblock %}
@@ -68,6 +79,12 @@
 	</div>
 	{% endblock %}
 </form>
+
+<script>
+	function selectCategoryOption(cat) {
+		$('input.form-control[name="category"]')[0].value = cat;
+	}
+</script>
 
 {% block footer %}
 {% endblock %}
