--- a/CTFd/themes/admin/templates/modals/users/edit.html
+++ b/CTFd/themes/admin/templates/modals/users/edit.html
@@ -26,6 +26,10 @@
 		{{ form.affiliation(class="form-control", autocomplete="off") }}
 	</div>
 	<div class="form-group">
+		{{ form.pool.label }}
+		{{ form.pool(class="form-control", autocomplete="off") }}
+	</div>
+	<div class="form-group">
 		{{ form.country.label }}
 		{{ form.country(class="form-control custom-select", autocomplete="off") }}
 	</div>
