po to jpo for front

--- a/CTFd/themes/admin/templates/challenges/challenges.html
+++ b/CTFd/themes/admin/templates/challenges/challenges.html
@@ -103,7 +103,7 @@
 							</td>
 							<td class="text-center">
 								{% if challenge.po_visibility == 1 %}
-									<span class="badge badge-warning">PO</span>
+									<span class="badge badge-warning">JPO</span>
 								{% endif %}
 								
 								{% if challenge.had_first_blood == 1 %}
