--- a/CTFd/themes/admin/templates/challenges/update.html
+++ b/CTFd/themes/admin/templates/challenges/update.html
@@ -134,7 +134,7 @@
 		
 		<div class="row">
 			<div class="col-6">
-				<small class="form-text text-muted">PO visiblity</small>
+				<small class="form-text text-muted">JPO visiblity</small>
 				
 				<div class="form-check">
 					<label class="form-check-label cursor-pointer">
