added connection info and categories for all chall types

--- a/CTFd/themes/admin/templates/challenges/update.html
+++ b/CTFd/themes/admin/templates/challenges/update.html
@@ -63,6 +63,8 @@
 			Connection Info<br>
 			<small class="form-text text-muted">
 				Use this to specify a link, hostname, or connection instructions for your challenge.
+				<br>
+				There's a special adapted display if it begins with <code>ssh</code>, <code>nc</code> or <code>http</code>
 			</small>
 		</label>
 		<input type="text" class="form-control chal-connection-info" name="connection_info" value="{{ challenge.connection_info | default('', true) }}">
