--- a/CTFd/themes/core-beta/templates/challenge.html
+++ b/CTFd/themes/core-beta/templates/challenge.html
@@ -51,7 +51,7 @@
 
             <span class="challenge-desc">{% block description %}{{ challenge.html }}{% endblock %}</span>
 
-            {% if challenge.connection_info %}
+            <!-- {% if challenge.connection_info %}
               <div class="mb-2">
                 <span class="challenge-connection-info">
                   {% block connection_info %}
@@ -65,7 +65,7 @@
                   {% endblock %}
                 </span>
               </div>
-            {% endif %}
+            {% endif %} -->
 
             {% if hints %}
               <div class="challenge-hints hint-row row">
