--- a/CTFd/plugins/docker_challenges/templates/admin_docker_status.html
+++ b/CTFd/plugins/docker_challenges/templates/admin_docker_status.html
@@ -20,7 +20,8 @@
                 <thead>
                     <tr>
                         <th width="10px" class="text-center" style="cursor: pointer;" onclick="sortTable(0)">ID</th>
-                        <th class="text-left" style="cursor: pointer;" onclick="sortTable(1)">{% if dockers[0].team_id %}Team{% else %}User{% endif %}</th>
+                        <!-- <th class="text-left" style="cursor: pointer;" onclick="sortTable(1)">{% if dockers[0].team_id %}Team{% else %}User{% endif %}</th> -->
+                        <th class="text-left" style="cursor: pointer;" onclick="sortTable(1)">User</th>
                         <th class="text-left" style="cursor: pointer;" onclick="sortTable(2)">Docker Image</th>
                         <th class="text-left" style="cursor: pointer;" onclick="sortTable(3)">Instance ID</th>
                         <th class="text-left">Revoke</th>
@@ -30,11 +31,12 @@
                     {% for docker in dockers %}
                     <tr id='tr_{{docker.instance_id}}' name='{{docker.id}}'>
                         <td class='text-center' value='{{docker.id}}'>{{docker.id}}</td>
-                        {% if docker.team_id %}
+                        <!-- {% if docker.team_id %}
                         <td class='text-center' value='{{docker.team_id | safe }}'>{{docker.team_id | safe }}</td>
                         {% else %}
                         <td class='text-center' value='{{docker.team_id | safe }}'>{{docker.user_id | safe }}</td>
-                        {% endif %}
+                        {% endif %} -->
+                        <td class='text-center' value='{{docker.team_id | safe }}'>{{docker.user_id | safe }}</td>
                         <td class='text-center' value='{{docker.docker_image}}'>{{docker.docker_image}}</td>
                         <td class='text-center' value='{{docker.instance_id | truncate(15)}}'>{{docker.instance_id | truncate(15)}}</td>
                         <td class='text-center'><a id="delete_{{docker.instance_id}}" style="cursor: pointer;" class="fas fa-trash" onclick="check_nuke_container('{{docker.instance_id}}', false)"></a></td>
